[metadata]
name = pymbxas
version = attr: pymbxas.__version__
author = attr: pymbxas.__author__
author_email = fabrice.roncoroni@gmail.com
url = https://gitlab.com/roncofaber/pymbxas
description = PyMBXAS is a package for setting up, manipulating, running and visualizing MBXAS calculations using Python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
install_requires =
    pyscf>=2.6.2
    ase>=3.23.0
    dill>=0.3.8
    psutil
    numpy<2.0.0
