[metadata]
name = pymbxas
version = attr:pymbxas.__version__
author = Fabrice Roncoroni
author_email = roncoroni@lbl.gov
url = https://gitlab.com/roncofaber/pymbxas
description = PyMBXAS is a package for setting up, manipulating, running and visualizing MBXAS calculations using Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
packages = find:
install_requires =
    pyscf>=2.6.2
    ase>=3.23.0
    dill>=0.3.8
    psutil
    numpy
    scikit-learn
